--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body style="margin: 0; overflow: hidden;">
     <!-- Escena de AR -->
     <a-scene embedded arjs>
-        <!-- Definir el marcador QR -->
-        <a-marker type="barcode" value="10">
+        <!-- Definir el marcador de patrón -->
+        <a-marker type="pattern" url="https://innovaedu1.github.io/proyar1/pattern-a1.patt">
             <!-- La imagen que aparecerá cuando se detecte el marcador -->
             <a-image src="https://i.postimg.cc/q7zF8Md4/62a9077489f7027d2d76169b.jpg" 
                      position="0 0 0" width="2" height="2">
